--- a/django_quiz/quiz/static/quiz/main.css
+++ b/django_quiz/quiz/static/quiz/main.css
@@ -362,7 +362,7 @@ body {
     bottom: 0;
     width: 100%;
     text-align: end;
-    visibility: hidden;
+    display: none;
     height: 3vh;
   }
 
