'quiz_home' now only shows quizzes of the same courses as the user

--- a/django_quiz/quiz/templates/quiz/home.html
+++ b/django_quiz/quiz/templates/quiz/home.html
@@ -10,7 +10,7 @@
 
     <!-- Quizzes -->
     <div id="myItems">
-    {% for quiz in filter.qs %}  {% comment %}  {% for quiz in quizzes %} {% endcomment %}
+    {% for quiz in filter.qs %}  {% comment %}  {% for quiz in quizzes %} {% for quiz in filter.qs %} {% endcomment %}
         <div class="card card-signin my-3">
             <div class="card-body">
                 <article class="media">
