--- a/django_quiz/quiz/templates/quiz/base.html
+++ b/django_quiz/quiz/templates/quiz/base.html
@@ -37,43 +37,16 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarToggle">
                     <div class="navbar-nav mr-auto">
-                        <a class="nav-item nav-link" href="{% url 'quiz-home' %}">Home</a>
+                        {% comment %} <a class="nav-item nav-link" href="{% url 'quiz-home' %}">Home</a> {% endcomment %}
                     </div>
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
                         {% if user.is_authenticated %}
                             <!-- Quiz Dropdown Menu -->
-                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                <ul class="navbar-nav ml-auto">
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="navbarQuizDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            Quiz
-                                        </a>
-                                    <!-- Here's the magic. Add the .animate and .slide-in classes to your .dropdown-menu and you're all set! -->
-                                    <div class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="{% url 'quiz-create' %}">Create New</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="{% url 'user-quiz' user.username %}">Quizzes</a>
-                                    </div>
-                                    </li>
-                                </ul>
-                            </div>
-                            <!-- Account Dropdown Menu -->
-                            <div class="collapse navbar-collapse" id="navbarSupportedContent2">
-                                <ul class="navbar-nav ml-auto">
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="navbarAccountDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            {{ request.user.username }}
-                                        </a>
-                                        <!-- Here's the magic. Add the .animate and .slide-in classes to your .dropdown-menu and you're all set! -->
-                                        <div class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
-                                            <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
-                                            <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
+                            <a class="nav-item nav-link" href="{% url 'quiz-create' %}">Create New</a>
+                            <a class="nav-item nav-link" href="{% url 'user-quiz' user.username %}">Quizzes</a>
+                            <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+                            <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                         {% else %}
                             <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
                             <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
